--- a/web/src/components/profile/ProfileFriends/ProfileFriends.module.css
+++ b/web/src/components/profile/ProfileFriends/ProfileFriends.module.css
@@ -36,12 +36,11 @@
 }
 
 .friends__list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   gap: 0.75rem;
   width: 100%;
   box-sizing: border-box;
-  justify-content: center;
-  flex-wrap: wrap;
   margin-top: 0.5rem;
   margin: 0;
   padding: 0;
